2008-07-31  Kevin Ollivier <kevino@theolliviers.com>

        Second attempt at Windows/wx build fix. Instead of avoiding inclusion of windows.h,
        use defines, etc. to avoid conflicts in each affected file. Also, change PLATFORM(WIN)
        to PLATFORM(WIN_OS) so that other ports using Windows headers get the right impls.

        * VM/SamplingTool.cpp:
        * wtf/Threading.h:

2008-07-31  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam.

        Fix Windows build.
        
        * kjs/collector.h:
        * wtf/FastMalloc.cpp:

2008-07-31  Csaba Osztrogonac  <oszi@inf.u-szeged.hu>

        Reviewed by Simon.

        Bug 20170: [Qt] missing namespace defines in JavaScriptCore.pro
        <https://bugs.webkit.org/show_bug.cgi?id=20170>

        * JavaScriptCore.pro: Added missing define.

2008-07-31  Alexey Proskuryakov  <ap@webkit.org>

        Rubber-stamped by Maciej.

        Eliminate JSLock (it was already disabled, removing the stub implementaion and all
        call sites now).

        * API/JSBase.cpp:
        (JSEvaluateScript):
        (JSCheckScriptSyntax):
        (JSGarbageCollect):
        * API/JSCallbackConstructor.cpp:
        (KJS::constructJSCallback):
        * API/JSCallbackFunction.cpp:
        (KJS::JSCallbackFunction::call):
        * API/JSCallbackObjectFunctions.h:
        (KJS::::init):
        (KJS::::getOwnPropertySlot):
        (KJS::::put):
        (KJS::::deleteProperty):
        (KJS::::construct):
        (KJS::::hasInstance):
        (KJS::::call):
        (KJS::::getPropertyNames):
        (KJS::::toNumber):
        (KJS::::toString):
        (KJS::::staticValueGetter):
        (KJS::::callbackGetter):
        * API/JSContextRef.cpp:
        (JSGlobalContextCreateInGroup):
        (JSGlobalContextRetain):
        (JSGlobalContextRelease):
        * API/JSObjectRef.cpp:
        (JSObjectMake):
        (JSObjectMakeFunctionWithCallback):
        (JSObjectMakeConstructor):